<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:background="@android:color/background_light"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/link_back"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/link_back"
    android:textColor="@color/blue_700"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.048"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.023" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <TextView
      android:id="@+id/title_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/title_register"
      android:textSize="24sp"
      android:textColor="@color/orange_500"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:paddingTop="16dp"
      android:paddingBottom="16dp"
      android:paddingStart="16dp"
      android:paddingEnd="16dp"
      android:fontFamily="@font/roboto_medium"/>

    <EditText
      android:id="@+id/input_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textEmailAddress"
      android:hint="@string/input_name"
      android:textColorHint="@color/blue_500"
      android:textColor="@color/blue_500"
      android:background="@drawable/edit_text"
      android:maxLines="1"
      android:importantForAccessibility="yes"
      android:autofillHints="username"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/title_text"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="40dp"/>

    <EditText
      android:id="@+id/input_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textEmailAddress"
      android:hint="@string/input_email"
      android:textColorHint="@color/blue_500"
      android:textColor="@color/blue_500"
      android:background="@drawable/edit_text"
      android:maxLines="1"
      android:importantForAccessibility="yes"
      android:autofillHints="emailAddress"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/input_name"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="40dp"/>

    <EditText
      android:id="@+id/input_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:hint="@string/input_password"
      android:textColorHint="@color/blue_500"
      android:textColor="@color/blue_500"
      android:background="@drawable/edit_text"
      android:maxLines="1"
      android:importantForAccessibility="yes"
      android:autofillHints="password"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/input_email"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="40dp"/>

    <EditText
      android:id="@+id/input_confirm_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:hint="@string/input_confirm_password"
      android:textColorHint="@color/blue_500"
      android:textColor="@color/blue_500"
      android:background="@drawable/edit_text"
      android:maxLines="1"
      android:importantForAccessibility="yes"
      android:autofillHints="password"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/input_password"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="40dp"/>

    <Button
      android:id="@+id/button_register"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/button_register"
      android:textColor="@color/white"
      android:background="@drawable/primary_button_background"
      android:textSize="18sp"
      android:importantForAccessibility="yes"
      app:layout_constraintTop_toBottomOf="@+id/input_confirm_password"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="32dp"
      app:layout_constraintHorizontal_bias="0.5"/>
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>