<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/login_activity"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@android:color/background_light"
  android:layout_centerVertical="true"
  tools:context=".LoginActivity">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <TextView
      android:id="@+id/title_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/roboto_medium"
      android:layout_marginStart="16dp"
      android:paddingTop="16dp"
      android:layout_marginEnd="16dp"
      android:paddingBottom="16dp"
      android:text="@string/title"
      android:textColor="@color/blue_700"
      android:textSize="24sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <EditText
      android:id="@+id/input_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textEmailAddress"
      android:hint="@string/input_email"
      android:maxLines="1"
      android:textColor="@color/blue_500"
      android:textColorHint="@color/blue_500"
      android:background="@drawable/edit_text"
      android:importantForAccessibility="yes"
      android:autofillHints="emailAddress"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/title_text_view"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="40dp"/>

    <EditText
      android:id="@+id/input_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:hint="@string/input_password"
      android:textColor="@color/blue_500"
      android:textColorHint="@color/blue_500"
      android:maxLines="1"
      android:background="@drawable/edit_text"
      android:importantForAccessibility="yes"
      android:autofillHints="password"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/input_email"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="40dp"/>

    <Button
      android:id="@+id/button_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/button_login"
      android:textColor="@color/white"
      android:background="@drawable/primary_button_background"
      android:textSize="18sp"
      android:importantForAccessibility="yes"
      app:layout_constraintTop_toBottomOf="@+id/input_password"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/link_create_account"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="32dp"
      app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
      android:id="@+id/link_create_account"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:importantForAccessibility="no"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="40dp"
      android:text="@string/create_account_text"
      android:textColor="@color/blue_700"
      android:textSize="16sp"
      android:gravity="end"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <View
      android:id="@+id/divider"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/black"
      android:layout_marginTop="40dp"
      android:layout_marginStart="40dp"
      android:layout_marginEnd="40dp"
      app:layout_constraintTop_toBottomOf="@+id/link_create_account"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

    <Button
      android:id="@+id/button_google_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/button_google_login"
      android:textColor="@android:color/white"
      android:background="@drawable/google_button_background"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="32dp"
      app:layout_constraintTop_toBottomOf="@+id/divider"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent" />


  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>